@@ -1,5 +1,7 @@
 Changelog for mk-parallel-restore:
 
+   * The --defaults-file option caused a mysql error (bug #1886866).
+
 2008-01-24: version 1.0.4
 
    * The -D option was used as a default DB for the connection (bug #1870415).
